src/styles/menu.css
html, body{
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
}
body {
    background-image: url("../../public/img/spooky.png");
    background-size: cover;
    position: relative;
}

.container {
    word-wrap: break-word;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}
.container#title{
    display: flex;
    justify-content: center;
    align-items: center;
}

h2{
    border-style: solid;
    border-image: linear-gradient(cornsilk,firebrick,red,black)15;
    border-radius: 20px;
    padding-left: 10px;
    padding-right: 10px;
    background:linear-gradient(180deg,#ff0507,#710507);
    vertical-align: center;
    text-align: center;
    font-size: 40px;
}
.container#middle{

    flex-direction: column;
    align-items: center;
}
.container#option{
    float: right;
}

.bt {
    width: 20%;
    height: 60px;
    border-radius: 30px;
    border-style: hidden;
    outline: 0;
    font-size: 15px;
    margin-bottom: 20px;
    background-color: darkred;
    box-shadow: 0 9px #710507;

    /*transition-duration: 500ms;*/
}
.bt#connexion{
    word-wrap: break-word;
    width: 10%;
    height: 30px;
    border-radius: 30px;

}
.bt#options{
    background-image: url("../../public/img/settings.png");
    background-size: 100%;
    width: 30px;
    height: 30px;
    object-fit: cover;

}
.section{
    padding-top: 10px;
}
.footer{
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    position: absolute;
    bottom: 0;
    width: 100%;

}
.social{
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.bt:hover{
    cursor: pointer;
    box-shadow: 0 6px #710507;
    font-weight: bolder;
}

.bt#options:hover{
    /*animation: transform 1.2s linear;
    transform: rotate(360deg);*/
}

.footer img{
    width: 75px;
    height: 75px;
}

